# split-tk

./: Cargo.toml  README.md  rustfmt.toml
scripts/: setup-hooks
scripts/hooks/: pre-commit
src/: main.rs
