[package]
name = "split-tk"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
description = "Simple tool to split data."
homepage = "https://github.com/vgobbo/split-tk"
documentation = "https://github.com/vgobbo/split-tk"
repository = "https://github.com/vgobbo/split-tk"
readme = "README.md"
keywords = [ "tool", "cli" ]
categories = [ "command-line-utilities" ]

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.4", features = [ "derive" ] }
exitcode = { version = "1.1" }
